@@ -1,6 +1,3 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <settings>
-  <category label="30301">
-    <setting id="bitrateLimitKbps" type="select" label="30302" default="Unlimited" values="Unlimited|4000|3000|2000|1200|700|400" />
-  </category>
 </settings>
